# ilp2

./: .gitignore  README.md  auto-test.sh  command  llama2_prompts.json  llama2_prompts_Kopie.json  llama2_prompts_head_tail.json  prompt_templates_tiny_v1.json  prompt_templates_v2.json  pyproject.toml  run_test.py  start_sglang_server.sh  system_prompt_v1.json  test.py
ilp/: __init__.py  cli.py  config.py  model.py  prompts.py  runner.py
irt2_llama_prompter/: __init__.py  irt2_manager  irt2_manager.py  llama_prompter.py  model_prompter.py  prompt_builder.py  run_config.py
irt2_llm_prompter/: __init__.py  cli.py  customErrors.py  model.py  model_prompter.py  old.py  preprocessor.py  prompts.py  run_config.py  runner.py  sample_config.py  test_logic.py
scripts/: #ilp-original-all-with-text.fish#  all-experiments.sh  auto-test.sh  command  config-dataset-irt.fish  config-mode-default.fish  config-mode-pre-ranker.fish  config-mode-prompt-re-ranking.fish  config-model-deepseek.fish  config-model-llama.fish  (+40 more)
scripts-ilp1/: ilp-70b-specific-csv.fish  ilp-config-model-llama3-70b.fish  ilp-config-prompt-generic-csv.fish  ilp-config-prompt-generic-with-examples-csv.fish  ilp-config-prompt-generic-with-examples-json.fish  ilp-config-prompt-generic-with-text-json.fish  ilp-config-prompt-specific-with-text-json.fish  ilp-exp-with-text-irt.fish  ilp-impromptu-70b-all-csv-val.fish  ilp-impromptu-70b-all-csv.fish  ilp-impromptu-70b-all-json.fish  ilp-impromptu-8b-irt-specific.fish  ilp-original-full-text.fish  ilp-original-full.fish  ilp-rep-ablation.fish  mention-tool.ipynb  run_test.py
scripts-ilp2/: config-dataset-blp.fish  config-dataset-irt.fish  config-env.fish  config-mode-default.fish  config-mode-full-re-ranking.fish  config-model-deepseek.fish  config-model-llama.fish  exp-blp-full.fish  exp-irt-full.fish  exp-starter-default.fish  exp-starter-frr.fish  exp-starter-prr.fish  exp-starter-ranker-results.fish  mode-ranker-results.fish  run.fish  sweep-default.fish
(+113 files in other folders)
