[tool.poetry]
name = "irt2-llm-prompter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vllm = "^0.4.2"
irt2 = {path = "lib/irt2", develop = true}

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
pudb = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
