[tool.poetry]
name = "irt2-llm-prompter"
version = "0.1.0"
description = "Using chatbots to do open world knowledge graph completion."
authors = ["Lukas Walker", "Felix Hamann"]
readme = "README.md"

[tool.poetry.scripts]
ilp = "irt2_llm_prompter.cli:entry"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
vllm = "^0.8.5"
click = "^8.1.7"
rich-click = "^1.8.2"
pretty-errors = "^1.2.25"
pudb = "^2024.1"
orjson = "^3.10.3"
irt2 = { path = "lib/irt2", develop = true }
h5py = "^3.12.1"
pystemmer = "^2.2.0.3"
autoawq = "^0.2.7.post2"
bitsandbytes = "^0.45.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
black = "^25.1.0"
pretty-errors = "^1.2.25"
pyright = "^1.1.400"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
